<?xml version="1.0"?>
<package>
  <name>cram_boxy_knowledge</name>
  <version>0.0.0</version>
  <description>The cram_boxy_knowledge package</description>
  <maintainer email="gaya@todo.todo">gaya</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/cram_boxy_knowledge</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cram_prolog</build_depend>
  <build_depend>cram_robot_interfaces</build_depend>
  <build_depend>cram_bullet_reasoning</build_depend>
  <build_depend>cram_designators</build_depend>
  <build_depend>cl_transforms_stamped</build_depend>
  <run_depend>cram_prolog</run_depend>
  <run_depend>cram_robot_interfaces</run_depend>
  <run_depend>cram_bullet_reasoning</run_depend>
  <run_depend>cram_designators</run_depend>
  <run_depend>cl_transforms_stamped</run_depend>
</package>
